--- a/app/src/main/res/layout/fragment_starships.xml
+++ b/app/src/main/res/layout/fragment_starships.xml
@@ -6,6 +6,7 @@
     tools:context=".ui.starships.StarshipsFragment">
 
     <TextView
+        android:id="@+id/tvName"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Hello" />
